fdo#52246 let helpex use gsicheck's tag checker

So the build will not break on translations errors in help.
English segment will be used, when the localized segment
has fatal error in it, e.g. a tag error that results in
invalid xml.

Change-Id: I8a74649d1f00f6379a7244f2582d27b8a437cd2f