l10ntools/source/merge.cxx
@@ -151,6 +151,7 @@ MergeDataFile::MergeDataFile(
         printf("Warning : Can't open %s\n", rFileName.getStr());
         return;
     }
+    std::size_t nLine=0;
     while (!aInputStream.eof())
     {
         std::string buf;
@@ -171,11 +172,12 @@ MergeDataFile::MergeDataFile(
             const rtl::OString sTEXT = sLine.getToken( 0, '\t', n ); // token 10
             const rtl::OString sQHTEXT = sLine.getToken( 1, '\t', n ); // token 12
             const rtl::OString sTITLE = sLine.getToken( 0, '\t', n ); // token 13
+            const rtl::OString sSDF(buf.data(),buf.length());
 
             if (!nLANG.equalsIgnoreAsciiCaseL(RTL_CONSTASCII_STRINGPARAM("en-US")))
             {
                 aLanguageSet.insert(nLANG);
-                InsertEntry( sTYP, sGID, sLID, sPFO, nLANG, sTEXT, sQHTEXT, sTITLE, filename, bCaseSensitive );
+                InsertEntry( sTYP, sGID, sLID, sPFO, nLANG, sTEXT, sQHTEXT, sTITLE, filename, bCaseSensitive, sSDF, ++nLine);
             }
         }
     }
@@ -243,7 +245,8 @@ void MergeDataFile::InsertEntry(
     const rtl::OString &rLID, const rtl::OString &rPFO,
     const rtl::OString &nLANG, const rtl::OString &rTEXT,
     const rtl::OString &rQHTEXT, const rtl::OString &rTITLE ,
-    const rtl::OString &rInFilename , bool bCaseSensitive
+    const rtl::OString &rInFilename , bool bCaseSensitive,
+    const rtl::OString &rSDFLine, const std::size_t nLine
     )
 {
     MergeData *pData;
@@ -274,7 +277,7 @@ void MergeDataFile::InsertEntry(
     }
 
     // finaly insert the cur string
-    pFEntrys->InsertEntry( nLANG , rTEXT, rQHTEXT, rTITLE );
+    pFEntrys->InsertEntry( nLANG , rTEXT, rQHTEXT, rTITLE, rSDFLine, nLine );
 }
 
 rtl::OString MergeDataFile::CreateKey(const rtl::OString& rTYP, const rtl::OString& rGID,
