l10ntools/StaticLibrary_transex.mk
@@ -37,6 +37,8 @@ $(eval $(call gb_StaticLibrary_add_exception_objects,transex,\
     l10ntools/source/merge \
     l10ntools/source/file \
     l10ntools/source/directory \
+    l10ntools/source/tagtest \
+    l10ntools/source/gsicheck \
 ))
 
 # vim: set noet sw=4 ts=4:
